# glaze_example

./: .gitignore  CMakeLists.txt  README.md
include/: example.hpp
src/: example.cpp
